ghc-4335c07/testsuite/tests/patsyn/should_compile/export-record-selector.hs
{-# LANGUAGE PatternSynonyms #-}

module Foo ( A(foo) ) where

data A a = A a

pattern P :: Int -> A Int
pattern P{foo} = A foo
