ghc-4335c07/testsuite/tests/patsyn/should_fail/local.hs
{-# LANGUAGE PatternSynonyms #-}
module ShouldFail where

varWithLocalPatSyn x = case x of
    P -> ()
  where
    pattern P = ()
